--- a/.eslintrc
+++ b/.eslintrc
@@ -10,8 +10,9 @@
   "plugins": ["@typescript-eslint", "prettier", "react", "react-hooks"],
   "rules": {
     "prettier/prettier": "error",
-    "require-jsdoc": "off",
+    "require-jsdoc": "warn",
     "react-hooks/rules-of-hooks": "error",
-    "react-hooks/exhaustive-deps": "error"
+    "react-hooks/exhaustive-deps": "error",
+    "valid-jsdoc": "off"
   }
 }
