--- a/package.json
+++ b/package.json
@@ -28,12 +28,14 @@
   },
   "dependencies": {
     "axios": "0.21.1",
+    "lodash": "4.17.20",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scripts": "4.0.1",
     "typescript": "4.1.3"
   },
   "devDependencies": {
+    "@types/lodash": "4.14.167",
     "@types/node": "12.19.13",
     "@types/react": "16.14.2",
     "@types/react-dom": "16.9.10",
