--- a/package.json
+++ b/package.json
@@ -27,11 +27,16 @@
     "lint": "eslint --cache . --ext .ts --ext .tsx"
   },
   "dependencies": {
+    "@material-ui/core": "4.11.2",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/styles": "4.11.2",
     "axios": "0.21.1",
     "lodash": "4.17.20",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-redux": "7.2.2",
     "react-scripts": "4.0.1",
+    "redux": "4.0.5",
     "typescript": "4.1.3"
   },
   "devDependencies": {
